services/fd-tagging-tool/src/test/resources/invalid/NoFeaturePresent/Sink.mt
// (c) https://github.com/MontiCore/monticore
package invalid.NoFeaturePresent;

component Sink {
  port in int value;
}
